--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,16 @@
 # Site settings
-title: State of the Map LATAM 2019
+title: State of the Map LATAM 2024
 email: info@osmlatam.org
-description: > # this means to ignore newlines until "baseurl:"
-  Conference website for State Of The Map Latam 2019, the OpenStreetMap conference for Latin American,
-  which took place in 2019 between November 14th and 16th in the city of Encarnación, Paraguay.
-url: "https://2019.osmlatam.org/" # the base hostname & protocol for your site
-baseurl: "" # the subpath of your site, e.g. /blog
+description: 
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Semper aeterno percipit ut his, sea ex utinam referrentur repudiandae. Ei qui diceret voluptua luptatum, te dolorum detracto hendrerit sed, ad per offendit consetetur. No epicuri hendrerit consetetur sit, sit dicta adipiscing ex, in facete detracto deterruisset duo. Scripta periculis ei eam, te pro movet reformidans. Vivendum intellegat et qui, ei denique consequuntur vix. Scripta periculis ei eam, te pro movet reformidans. Scripta periculis ei eam, te pro movet reformidans. Quot populo ad qui. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Eos ex affert fabulas iudicabit, dolore ornatus instructior ex per.
+url: "https://2024.osmlatam.org/" # the base hostname & protocol for your site
+baseurl: "" 
 email: "info@osmlatam.org"
 facebook_page: "osmlatam"
 twitter_username: "osmlatam"
 github_username:
-website: "https://2019.osmlatam.org/"
+website: "https://2024.osmlatam.org/"
 exclude: [README.md]
-
-
-maintenance_mode: true
 
 # Build settings
 markdown: kramdown
