--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title: State of the Map LATAM 2024
 email: info@osmlatam.org
 description: 
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Semper aeterno percipit ut his, sea ex utinam referrentur repudiandae. Ei qui diceret voluptua luptatum, te dolorum detracto hendrerit sed, ad per offendit consetetur. No epicuri hendrerit consetetur sit, sit dicta adipiscing ex, in facete detracto deterruisset duo. Scripta periculis ei eam, te pro movet reformidans. Vivendum intellegat et qui, ei denique consequuntur vix. Scripta periculis ei eam, te pro movet reformidans. Scripta periculis ei eam, te pro movet reformidans. Quot populo ad qui. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Eos ex affert fabulas iudicabit, dolore ornatus instructior ex per.
-url: "https://2024.osmlatam.org/" # the base hostname & protocol for your site
+url: "https://2024.osmlatam.org/" 
 baseurl: "" 
-email: "info@osmlatam.org"
+email: "state@osmlatam.org"
 facebook_page: "osmlatam"
 twitter_username: "osmlatam"
 github_username:
@@ -26,20 +26,20 @@ t:
       about:
         label: About
         url: /en/#about
-      program:
-        label: Send your presentation
-        url: https://www.papercall.io/sotm-latam-2018
-        label: Program
-        url: /en/#program
+      # program:
+      #   label: Send your presentation
+      #   url: 
+      #   label: Program
+      #   url: /en/#program
       venue:
         label: Venue
         url: /en/#venue
-      register:
-        label: Register
-        url: https://www.eventbrite.com.ar/e/state-of-the-map-latam-2018-tickets-46950300613
+      # register:
+      #   label: Register
+      #   url: 
       wiki:
         label: Wiki
-        url: https://wiki.openstreetmap.org/wiki/State_Of_The_Map_Latam_2019
+        url: https://wiki.openstreetmap.org/wiki/State_Of_The_Map_Latam_2024
   es:
     language_name: Español
     modal:
@@ -49,20 +49,20 @@ t:
       about:
         label: Sobre
         url: /#about
-      program:
-        label: Envia tu presentación
-        url: https://www.papercall.io/sotm-latam-2018
-        label: Programa
-        url: /#program
+      # program:
+      #   label: Envia tu presentación
+      #   url: 
+      #   label: Programa
+      #   url: /#program
       venue:
         label: Lugar
         url: /#venue
-      register:
-        label: Regístrate
-        url: https://www.eventbrite.com/e/osm-latam-py-2019-registration-70204859625
+      # register:
+      #   label: Regístrate
+      #   url: 
       wiki:
         label: Wiki
-        url: https://wiki.openstreetmap.org/wiki/ES:State_of_the_Map_Latam_2019
+        url: https://wiki.openstreetmap.org/wiki/ES:State_of_the_Map_Latam_2024
   pt:
     language_name: Português
     modal:
@@ -72,17 +72,17 @@ t:
       about:
         label: Sobre
         url: /pt/#about
-      program:
-        label: Envia sua palestra
-        url: https://www.papercall.io/sotm-latam-2018
-        label: Programa
-        url: /pt/#program
+      # program:
+      #   label: Envia sua palestra
+      #   url: https://www.papercall.io/sotm-latam-2018
+      #   label: Programa
+      #   url: /pt/#program
       venue:
         label: Local
         url: /pt/#venue
-      register:
-       label: Inscreva-se
-       url: https://sotmlatam2018.eventbrite.com.ar
+      # register:
+      #  label: Inscreva-se
+      #  url: https://sotmlatam2018.eventbrite.com.ar
       wiki:
         label: Wiki
-        url: https://wiki.openstreetmap.org/wiki/Pt:State_of_the_Map_Latam_2018
+        url: https://wiki.openstreetmap.org/wiki/Pt:State_of_the_Map_Latam_2024
