Improve intro section

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ map_config:
   coordinates: [-1.43792, -48.46148] # Latitude, Longitude
   zoom_level: 18
 
+
 # Translations
 t:
   en:
@@ -45,6 +46,13 @@ t:
       wiki:
         label: Wiki
         url: https://wiki.openstreetmap.org/wiki/State_Of_The_Map_Latam_2024
+    intro_section:
+      alt_text: "State of the Map LATAM - Belém 2024"
+      headline: "What world do your maps reveal?"
+      location: "Belém, Brazil"
+      dates: "December 7 and 8"
+      register_button: "Register"
+      submit_presentation: "Submit Your Presentation"
     venue_section:
       title: "Venue"
       place_name: "Instituto Federal do Pará (IFPA)"
@@ -72,6 +80,14 @@ t:
       wiki:
         label: Wiki
         url: https://wiki.openstreetmap.org/wiki/ES:State_of_the_Map_Latam_2024
+    # Sections
+    intro_section:
+      alt_text: "State of the Map LATAM - Belém 2024"
+      headline: "¿Qué mundo revelan tus mapas?"
+      location: "Belém, Brasil"
+      dates: "7 y 8 de diciembre"
+      register_button: "Regístrate"
+      submit_presentation: "Envía tu Ponencia"
     venue_section:
       title: "Lugar"
       place_name: "Instituto Federal do Pará (IFPA)"
@@ -100,8 +116,16 @@ t:
       wiki:
         label: Wiki
         url: https://wiki.openstreetmap.org/wiki/Pt:State_of_the_Map_Latam_2024
+    intro_section:
+      alt_text: "State of the Map LATAM - Belém 2024"
+      headline: "Que mundo os seus mapas revelam?"
+      location: "Belém, Brasil"
+      dates: "7 e 8 de dezembro"
+      register_button: "Registre-se"
+      submit_presentation: "Envie sua Apresentação"        
     venue_section:
       title: "Local"
       place_name: "Instituto Federal do Pará (IFPA)"
       description: "Vivamus aliquet dignissim sapien, semper venenatis massa sagittis dictum. Mauris in magna rutrum, tristique est quis, venenatis nisl. Sed quis nibh nulla. Praesent eu volutpat urna. Maecenas venenatis, augue sed aliquam luctus, nibh lectus pellentesque magna, at egestas eros nisi sit amet lacus. In hac habitasse platea dictumst."
+      
 
