Improve head section

--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,42 @@
 # Site settings
 title: State of the Map LATAM 2024
+author: OpenStreetMap Latam
 email: info@osmlatam.org
-description: 
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Semper aeterno percipit ut his, sea ex utinam referrentur repudiandae. Ei qui diceret voluptua luptatum, te dolorum detracto hendrerit sed, ad per offendit consetetur. No epicuri hendrerit consetetur sit, sit dicta adipiscing ex, in facete detracto deterruisset duo. Scripta periculis ei eam, te pro movet reformidans. Vivendum intellegat et qui, ei denique consequuntur vix. Scripta periculis ei eam, te pro movet reformidans. Scripta periculis ei eam, te pro movet reformidans. Quot populo ad qui. Pri posse graeco definitiones cu, id eam populo quaestio adipiscing, usu quod malorum te. Offendit eleifend moderatius ex vix, quem odio mazim et qui, purto expetendis cotidieque quo cu, veri persius vituperata ei nec. Eos ex affert fabulas iudicabit, dolore ornatus instructior ex per.
-url: "https://2024.osmlatam.org/" 
-baseurl: "" 
-email: "state@osmlatam.org"
-facebook_page: "osmlatam"
-twitter_username: "osmlatam"
-github_username:
+url: "https://2024.osmlatam.org/"
+baseurl: ""
 website: "https://2024.osmlatam.org/"
 exclude: [README.md]
+
+social:
+  facebook:
+    title: "Facebook"
+    url: "https://www.facebook.com/osmlatam"
+    icon: "fab fa-facebook"
+  twitter:
+    title: "Twitter"
+    handle: "@osmlatam"
+    url: "https://twitter.com/osmlatam"
+    icon: "fab fa-twitter"
+  youtube:
+    title: "YouTube"
+    url: "https://www.youtube.com/channel/UCzYgQtCudy1ihZYAlpC3EXQ"
+    icon: "fab fa-youtube"
+  linkedin:
+    title: "LinkedIn"
+    url: "https://www.linkedin.com/company/103151706/"
+    icon: "fab fa-linkedin"
 
 registrations:
   open: true
   url: https://doity.com.br/sotm-latam-bra-2024
 
-program: 
-  proposals: 
+program:
+  proposals:
     open: false
     url: https://pretalx.com/sotm-latam-bra-2024/cfp
   schedule:
     ready: false
     url: https://pretalx.com/sotm-latam-bra-2024/schedule
-  
 
 # Build settings
 markdown: kramdown
@@ -33,11 +46,11 @@ map_config:
   coordinates: [-1.43792, -48.46148] # Latitude, Longitude
   zoom_level: 18
 
-
 # Translations
 t:
   en:
     language_name: English
+    description: "Join us for the State of the Map LATAM 2024 in Belém, Brazil on December 7-8, 2024. Engage with experts and enthusiasts from across Latin America in this vibrant conference dedicated to fostering open mapping and innovative geospatial technologies."
     modal:
       abstract: Abstract
       close: Close
@@ -61,28 +74,32 @@ t:
       dates: "December 7 and 8, 2024"
       registrations_button: "Register Now"
       submit_proposal: "Submit Your Proposal"
+    program_section:
+      title: "Program"
+      description: "Vivamus aliquet dignissim sapien, semper venenatis massa sagittis dictum. Mauris in magna rutrum, tristique est quis, venenatis nisl. Sed quis nibh nulla. Praesent eu volutpat urna. Maecenas venenatis, augue sed aliquam luctus, nibh lectus pellentesque magna, at egestas eros nisi sit amet lacus. In hac habitasse platea dictumst."
     venue_section:
       title: "Venue"
       place_name: "Instituto Federal do Pará (IFPA)"
       description: "Vivamus aliquet dignissim sapien, semper venenatis massa sagittis dictum. Mauris in magna rutrum, tristique est quis, venenatis nisl. Sed quis nibh nulla. Praesent eu volutpat urna. Maecenas venenatis, augue sed aliquam luctus, nibh lectus pellentesque magna, at egestas eros nisi sit amet lacus. In hac habitasse platea dictumst."
   es:
     language_name: Español
+    description: "Únase a nosotros para el State of the Map LATAM 2024 en Belém, Brasil, del 7 al 8 de diciembre de 2024. Participe con expertos y entusiastas de toda Latinoamérica en esta conferencia vibrante dedicada a fomentar la cartografía abierta y las tecnologías geoespaciales innovadoras."
     modal:
       abstract: Ver resumen
       close: Cerrar
     menu:
       about:
         label: Acerca de
-        url: /es/#about
+        url: /#about
       program:
         label: Programa
-        url: /es/#program
+        url: /#program
       sponsors:
         label: Patrocinadores
-        url: /es/#sponsors
+        url: /#sponsors
       access:
         label: Cómo llegar
-        url: /es/#access
+        url: /#access
     intro_section:
       alt_text: "State of the Map LATAM - Belém 2024"
       headline: "La conferencia latinoamericana de OpenStreetMap"
@@ -96,6 +113,7 @@ t:
       description: "Vivamus aliquet dignissim sapien, semper venenatis massa sagittis dictum. Mauris in magna rutrum, tristique est quis, venenatis nisl. Sed quis nibh nulla. Praesent eu volutpat urna. Maecenas venenatis, augue sed aliquam luctus, nibh lectus pellentesque magna, at egestas eros nisi sit amet lacus. In hac habitasse platea dictumst."
   pt:
     language_name: Português
+    description: "Junte-se a nós para o State of the Map LATAM 2024 em Belém, Brasil, de 7 a 8 de dezembro de 2024. Engaje com especialistas e entusiastas de toda a América Latina nesta conferência vibrante dedicada a fomentar o mapeamento aberto e tecnologias geoespaciais inovadoras."
     modal:
       abstract: Ver resumo
       close: Fechar
@@ -118,10 +136,8 @@ t:
       location: "Belém, Brasil"
       dates: "7 e 8 de dezembro de 2024"
       registrations_button: "Inscreva-se"
-      submit_proposal: "Envie sua atividade"        
+      submit_proposal: "Envie sua atividade"
     venue_section:
       title: "Local"
       place_name: "Instituto Federal do Pará (IFPA)"
       description: "Vivamus aliquet dignissim sapien, semper venenatis massa sagittis dictum. Mauris in magna rutrum, tristique est quis, venenatis nisl. Sed quis nibh nulla. Praesent eu volutpat urna. Maecenas venenatis, augue sed aliquam luctus, nibh lectus pellentesque magna, at egestas eros nisi sit amet lacus. In hac habitasse platea dictumst."
-      
-
