--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ t:
       alt_text: "State of the Map LATAM - Belém 2024"
       headline: "The Latin American OpenStreetMap Conference"
       location: "Belém, Brazil"
-      dates: "December 7 and 8, 2024"
+      dates: "December 6-8, 2024"
       registrations_button: "Register Now"
       submit_proposal: "Submit Your Proposal"
     program_section:
@@ -103,7 +103,7 @@ t:
       alt_text: "State of the Map LATAM - Belém 2024"
       headline: "La conferencia latinoamericana de OpenStreetMap"
       location: "Belém, Brasil"
-      dates: "7 y 8 de diciembre, 2024"
+      dates: "6, 7 y 8 de diciembre, 2024"
       registrations_button: "Inscripciones"
       submit_proposal: "Envía tu Ponencia"
     venue_section:
@@ -133,7 +133,7 @@ t:
       alt_text: "State of the Map LATAM - Belém 2024"
       headline: "A conferência latino-americana de OpenStreetMap"
       location: "Belém, Brasil"
-      dates: "7 e 8 de dezembro de 2024"
+      dates: "6, 7 e 8 de dezembro de 2024"
       registrations_button: "Inscreva-se"
       submit_proposal: "Envie sua atividade"
     venue_section:
