--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,7 @@ t:
       dates: "December 6-8, 2024"
       registrations_button: "Register Now"
       submit_proposal: "Submit Your Proposal"
+      view_program: "View Program"
     program_section:
       title: "Program"
       call_for_proposals_will_open_soon: "The call for activities will open soon!"
@@ -111,6 +112,7 @@ t:
       dates: "6, 7 y 8 de diciembre, 2024"
       registrations_button: "Inscripciones"
       submit_proposal: "Envía tu Ponencia"
+      view_program: "Ver Program"
     program_section:
       title: "Programa"
       call_for_proposals_will_open_soon: "La convocatoria de actividades se abrirá pronto!"
@@ -150,6 +152,7 @@ t:
       dates: "6, 7 e 8 de dezembro de 2024"
       registrations_button: "Inscreva-se"
       submit_proposal: "Envie sua atividade"
+      view_program: "Ver Programa"
     program_section:
       title: "Programa"
       call_for_proposals_will_open_soon: "A chamada de atividades será aberta em breve!"
